app/assets/stylesheets/style.scss
body {
  background: #D4D4D4;
  font-family: 'Maven Pro', sans-serif;
}

h1 {
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

.full-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: black;
  pointer-events: none;
}

// pre {
//   background: #272822;
// }
/*flash*/
.alert-error {
    background-color: #f2dede;
    border-color: #eed3d7;
    color: #b94a48;
    text-align: left;
 }

.alert-alert {
    background-color: #f2dede;
    border-color: #eed3d7;
    color: #b94a48;
    text-align: left;
 }

.alert-success {
    background-color: #dff0d8;
    border-color: #d6e9c6;
    color: #468847;
    text-align: left;
 }

.alert-notice {
    background-color: #dff0d8;
    border-color: #d6e9c6;
    color: #468847;
    text-align: left;
 }

.alert-dismissible {
  position: fixed;
  top: 40px;
  left: 0;
  right: 0;
  z-index: 7000;
  margin: 4% 5% 0% 5%;
}

.warning-text {
  color: red;
}


/////////////////// NavBar //////////////////////////


.navbar {
  min-height: 80px;
  margin-bottom: 0;
}

.navbar-default {
  background-color: #000;
  border-color: #000;
}

.navbar-default .navbar-brand {
    color: #f8f8ff;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
    color: #FFFFFF;
}

.navbar-default .navbar-nav > li > a {
    color: #f8f8ff;
    line-height: 50px;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #FFFFFF;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #AEAEAE;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: #FFFFFF;
}

.navbar-brand {
  // padding: 0 15px;
  height: 80px;
  line-height: 80px;
}

.navbar-brand img {
  height: 50px;
}
////////////////// Welcome Page ////////////////////

.welcome-message {
  color: white;
  padding: 1em;
  margin-top: 10vh;

  h1 {
    font-size: 5.5em;
    text-align: center;
  }
}
// .row.no-gutters {
//   margin-right: 0;
//   margin-left: 0;
// }
// .row.no-gutters > [class^="col-"],
// .row.no-gutters > [class*=" col-"] {
//   padding-right: 0;
//   padding-left: 0;
// }

// .img-responsive-parent {
//   margin: 0 -60px;
// }

// .welcome-message {
//   padding: 20px 75px 0px 0px;
//   font-size: 140%;
// }

// .contact-heading {
//   background: #16A496;
//   color: #FFFFFF;
//   padding: 20px;
//   font-style: italic;
//   margin: 50px 0px 0px -15px;
// }

// .contact-table {
//   padding-right: 75px;
//   font-size: 140%;
// }

// .text-align-right {
//   text-align: right;
//   padding: 10px 100px;
// }


////////////////////// Calendar ////////////////////////////

h2.curriculum-heading {
  background: #F05353;
  padding: 20px;
  color: #FFFFFF;
  font-style: italic;
  font-size: 300%;
  margin: 120px 0px 30px 0px;

}

p.course-subtext {
  color: #16A496;
  font-size: 200%;
  font-style: italic;
  padding: 10px 0px 20px 0px;
}

p.subject-description {
  color: #16A496;
  font-size: 140%;
}

span.subject-title {
  color: #F05353;
  font-weight: bold;
}

p.capstone_blog {
  font-size: 120%;
}

.calendar {
  background: #FFFFFF;
  padding: 10px;
  margin-top: 5px;
  // border-radius: 5px;
  // border: 2px solid #000000;
}

.fc-unthemed .fc-today {
  background-color: #AFDFE0;
}

.cohort-details-calendar {
  margin-top: 20px;
  background: #000;
  color: white;
  border: #000000 2px solid;
  // border-radius: 5px;
  list-style-type: none;
  padding: 5px;
  font-size: 20px;
}
///////////////////// Students /////////////////////////////

.row-margin {
  margin-top: 50px;
}

textarea#student_details {
  height: 300px;
}

table.student {
  background: #AFDFE0;
}

.modal-body {
  color: red;
}

.admin-select {
  margin: 20px 0px 20px 0px;
}


//////////////////////// Prework /////////////////////////////

.prework-important {
  font-weight: bold;
  font-size: 140%;
}

.white{
  background: #FFFFFF;
  padding: 20px 10px 10px 10px;
  // border-radius: 5px;
  border: 1px solid #eee;
  margin: 20px 0px 0px 0px;
}

.white-due{
  background: #FFFFFF;
  padding: 20px 10px 10px 10px;
  // border-radius: 5px;
  border: 2px solid #000000;
  margin: 0px 0px 0px 0px;
}


textarea.submission-box {
  height: 600px;
  margin-bottom: 5px;
}

.submitted-date {
  margin: -3px 0 15px 0;
  color: #16A496;
}

.embed-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
  width: 100%;
  height: auto;
  margin-bottom: 12px;
} 

.embed-container iframe,
.embed-container object,
.embed-container embed {
  position: absolute;
  top: 0; left: 0;
  width: 100%;
  height: 100%;
}

.history-box {
  border: 1px solid #DDDDDD;
  // border-radius: 5px;
  margin: 0px;
  padding: 15px 5px 5px 5px;
}

textarea.comment-write {
  height: 200px;
  margin: 5px 0px 5px 0px;
}

.author-info {
  text-align: right;
}

.not-instructor-class {
  color: green;
}

.instructor-class {
  color: #FF66CC;
}

.comments {
  margin-top: 10px;
}

textarea#assignment_question {
  height: 500px;
}


.tab-heading {
  padding:10px 5px 10px 5px;
}

.uploaded-files {
  border: 1px solid #000000;
  margin: 20px 0px 5px 0px;
  padding: 5px;
  // border-radius: 5px;
}

.tab-box {
  margin: 10px 0px 10px 0px;
}

.current-assignment a {
  color: #F05353;
}

.viewed {
  color: green;
}

.un-viewed {
  color: red;
}

.viewed-key {
  background: #DFF0D8;
}

.un-viewed-key {
  background: #F2DEDE;
}

.un-viewed-key-comment {
  background: #FCF8E3;
}

.prettyprint ol.linenums > li {
  list-style-type: decimal;
}

.instructor-hover:hover { 
  background: #e6e6e6;
}

.instructor-previous-messages {
  margin: 20px 0px 0px 0px;
}

.helper-text-heading {
  font-style: italic;
  margin: 0px 0px 0px 0px;
}

.instructor-comment-filter {
  margin: 0px 0px 30px 0px;
}

.student-commented {
  color: #3F803F;
}
.assignment-commented {
  color: #ff6600;
}

.comment-box {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  color: #333;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  // border-radius: 4px;
}

.demo-footer {
  margin-bottom: 200px;
}

.assignment-sidebar {
  text-indent: 20px;
}

.assignment-order-btn {
  margin-right: 350px;
}



//////////////////////// User Mangagement ////////////////////////////////

.form-inline .wide-search {
  min-width: 400px;
}

.force-heading {
  white-space: nowrap;
}

